vm/snapshots/exceptions-finally_after_catch-FinallyAfterCatchShouldWorkOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
In catch block
In finally block
----- STDERR -----
