vm/snapshots/exceptions-handling-access_message-AccessMessageOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Test message
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Test message
----- STDERR -----
