vm/snapshots/exceptions-handling-catch_specific-CatchSpecificOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught NullPointerException
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught NullPointerException
----- STDERR -----
