vm/snapshots/exceptions-handling-catch_subclass-CatchSubclassOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught IOException (superclass)
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught IOException (superclass)
----- STDERR -----
