vm/snapshots/exceptions-handling-catch_without_throw-CatchWithoutThrowOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
In try block
After try-catch
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
In try block
After try-catch
----- STDERR -----
