vm/snapshots/exceptions-handling-constructor_exception-ConstructorExceptionOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught!
----- STDERR -----
java.lang.IllegalArgumentException: Exception from constructor
	at exceptions.handling.constructor_exception.ConstructorExceptionOkMain$Foo.<init>(ConstructorExceptionOkMain.java:6)
	at exceptions.handling.constructor_exception.ConstructorExceptionOkMain.main(ConstructorExceptionOkMain.java:11)

===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught!
----- STDERR -----
java.lang.IllegalArgumentException: Exception from constructor
	at exceptions.handling.constructor_exception.ConstructorExceptionOkMain$Foo.<init>(ConstructorExceptionOkMain.java:6)
	at exceptions.handling.constructor_exception.ConstructorExceptionOkMain.main(ConstructorExceptionOkMain.java:11)
