vm/snapshots/exceptions-handling-finally_block-FinallyOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
In catch block
In finally block
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
In catch block
In finally block
----- STDERR -----
