vm/snapshots/exceptions-handling-nested_calls-NestedCallsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught NPE from nested calls
Execution continues after catch
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Caught NPE from nested calls
Execution continues after catch
----- STDERR -----
