vm/snapshots/exceptions-handling-nested_exception-NestedExceptionOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
In catch block
Caught inner exception
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
In catch block
Caught inner exception
----- STDERR -----
